@@ -1,3 +1,12 @@
+Wed Jan 19 01:44:00 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* intervm.c (wormhole_interpret_this_obj): Bug fix.  rb_ary_new2()
+	  do not set its length so we should not directly assign, just use
+	  rb_ary_push() instead.
+
+	* intervm.c (wormhole_dealloc): Bug fix.  Wormholes can how
+	  contain immediates, so this RBASIC() should cause SIGSEGV.
+
 Tue Jan 18 02:48:47 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* vm.c (vm_create): When a VM was created, it has inherited its
